[package]
name = "atomicmarket"
version = "0.3.1"
authors = ["Paul <paulm@pinax.network>"]
description = "Substreams for AtomicMarket"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
prost = "0.11"
prost-types = "0.11"
substreams = "0.5"
substreams-antelope = "0.3"
antelope = "0.1.5"
substreams-sink-prometheus = "0.1"
substreams-entity-change = "1.3"
substreams-database-change = "1.2.1"


[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
